...
            }
            OutlinedTextField(
                input,
                onInput,
                enabled = !finished,
                singleLine = true,
                modifier = Modifier.fillMaxWidth().testTag("number-input"),
                label = { Text(stringResource(R.string.number_picker_value)) },
                keyboardOptions =
                    KeyboardOptions(
                        keyboardType =
                            when {
                                config.labels != null -> KeyboardType.Text
...
                TextButton(
                    {
                        finishInput()
                        onConfirm()
                    },
                    enabled = !finished,
                    modifier = Modifier.testTag("number-confirm"),
                ) {
                    Text(stringResource(R.string.ok))
                }
            }
        }
    }
...
